fix items service

--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -1453,5 +1453,6 @@
     "OptionReportStatistics": "Statistics",
     "OptionReportGrouping": "Grouping",
     "HeaderExport": "Export",
-    "HeaderColumns": "Columns"
+    "HeaderColumns": "Columns",
+    "ButtonReset": "Reset"
 }
